fixed problem caused by hidden overflow

--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body {
   color: #fff;
   line-height: 1.6;
   height: 100vh;
-  
 }
 
 .main-container {
@@ -24,9 +23,11 @@ body {
   overflow-y: scroll;
   scroll-behavior: smooth;
   scroll-snap-type: y mandatory;*/
+  
 }
 
 .main-header {
+  overflow-x: visible;
   z-index: 1;
   background: linear-gradient(rgba(0, 0, 0, 1), rgba(250, 250, 250, 0));
   position: fixed;
@@ -36,12 +37,17 @@ body {
 }
 
 .top-header {
+  
+
   display: flex;
   justify-content: space-between;
   align-items: center;
+  overflow-x: visible;
 }
 
 .menu {
+  overflow-x: visible;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -77,6 +83,7 @@ body {
 .menu-item {
   position: relative; 
   padding: 1rem;
+  overflow-x: visible;
 }
 
 .menu-item:hover table,
@@ -97,6 +104,7 @@ body {
   opacity: 0;
   visibility: hidden;
   transition: opacity 200ms ease-in-out;
+  
 }
 
 table.nav_list_drop {
@@ -159,6 +167,7 @@ section {
   
 }
 
+
 /*Subjects Menu*/
 .section-content {
   display: flex;
@@ -172,6 +181,9 @@ table.theory-subjects {
   text-align: left;
   border-spacing: 30px 0px;
   border-collapse: separate;
+  
+}
+table#subjects-drop{
 }
 
 /*Add to xs screen plus flex-direction: row to .section-content
